--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vanilla App Template</title>
     <link rel="stylesheet" href="./css/styles.css" />
+    
   </head>
   <body>
-    <load ="partials/header.html" />
+    <load src="./1-gallery.html" />
+    <load srs="./2-form.html"/>
 
     
     <script type="module" src="./main.js"></script>
